:fire: Update gitignore
Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+.DS_Store
 .config/scripts
 .config/wireshark
 .config/github-copilot
 .config/gh
 .config/spaceship.zsh.zwc
+.config/k9s/benchmarks
+.config/k9s/clusters
+.config/k9s/screen-dumps
