:gear: Update tmux config
* :art: Change looks and colors
* :technologist: Change terminal colors configuration

Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,5 @@
 # Set true color support
-set -g default-terminal 'tmux-256color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -a terminal-features 'xterm-kitty:RGB'
 
 # Set theme colors (rose pine moon colors)
 set -g @COLOR_BASE '#faf4ed'
@@ -13,6 +12,7 @@ set -g @COLOR_IRIS '#907aa9'
 set -g @COLOR_TEXT '#575279'
 set -g @COLOR_MUTED '#6e6a86'
 set -g @COLOR_OVERLAY '#f2e9e1'
+set -g @COLOR_LEAF '#6d8f89'
 
 # Set default shell
 set-option -g default-shell /bin/zsh
@@ -30,7 +30,7 @@ set -g status-left ''
 # Increase status left length (from 10)
 set -g status-left-length 100
 # Display information on the right side of the staus bar
-set -g status-right '#[fg=#{@COLOR_ROSE}]#[bg=#{@COLOR_ROSE},fg=#{@COLOR_OVERLAY},bold] %H:%M %b %d, %Y#[fg=#{@COLOR_ROSE},bg=default]'
+set -g status-right ' #[bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE},bold] %H:%M %b %d, %Y '
 # Increase status right length (from 10)
 set -g status-right-length 100
 # Make status bar background transparent
@@ -38,14 +38,14 @@ set -g status-style 'bg=default'
 set -g status-justify left
 setw -g window-status-separator ' '
 
-set -g window-status-current-format '#[fg=#{@COLOR_LOVE}]#[bg=#{@COLOR_LOVE},fg=#{@COLOR_OVERLAY},bold]󰓏 #{?window_zoomed_flag, ,}#{window_name}:#{window_panes}#[fg=#{@COLOR_LOVE},bg=default]'
-set -g window-status-format         '#[fg=#{@COLOR_ROSE}]#[bg=#{@COLOR_ROSE},fg=#{@COLOR_OVERLAY}]#{window_name}:#{window_panes}#[fg=#{@COLOR_ROSE},bg=default]'
+set -g window-status-current-format '#[bg=#{@COLOR_FOAM},fg=#{@COLOR_BASE},bold] 󰓏 #{?window_zoomed_flag, ,}#{window_name}:#{window_panes} '
+set -g window-status-format         '#[bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE},bold] #{window_name}:#{window_panes} '
 
-set -g message-command-style 'bg=#{@COLOR_LOVE},fg=#{@COLOR_OVERLAY}'
-set -g message-style 'bg=#{@COLOR_LOVE},fg=#{@COLOR_OVERLAY}'
-set -g mode-style 'bg=#{@COLOR_MUTED},fg=#{@COLOR_OVERLAY}'
+set -g message-command-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
+set -g message-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
+set -g mode-style 'bg=#{@COLOR_MUTED},fg=#{@COLOR_BASE}'
 set -g pane-active-border-style 'bg=default,fg=#{@COLOR_TEXT}'
-set -g pane-border-style 'bg=default,fg=#{@COLOR_OVERLAY}'
+set -g pane-border-style 'bg=default,fg=#{@COLOR_BASE}'
 
 # Set custom tmux prefix key binding
 unbind-key C-b
@@ -130,6 +130,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum'     	          # Automatically save
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name' 	  # Automatically rename your tmux windows to Nerd Font Icons
 set -g @plugin 'sainnhe/tmux-fzf'				                    # Use fzf to manage your tmux work environment!
 set -g @plugin 'tmux-plugins/tmux-logging'			            # Easy logging and screen capturing for Tmux
+
+set -g @resurrect-strategy-nvim 'session'
+
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'kitty'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
