--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,9 @@ set -g @COLOR_TEXT '#575279'
 set -g @COLOR_MUTED '#6e6a86'
 set -g @COLOR_OVERLAY '#f2e9e1'
 set -g @COLOR_LEAF '#6d8f89'
+set -g @COLOR_HIGHLIGHT_LOW '#f4ede8'
+set -g @COLOR_HIGHLIGHT_MED '#dfdad9'
+set -g @COLOR_HIGHLIGHT_HIGH '#cecacd'
 
 # Set default shell
 set-option -g default-shell /bin/zsh
@@ -43,7 +46,7 @@ set -g window-status-format         '#[bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE},bold]
 
 set -g message-command-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
 set -g message-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
-set -g mode-style 'bg=#{@COLOR_MUTED},fg=#{@COLOR_BASE}'
+set -g mode-style 'bg=#{@COLOR_HIGHLIGHT_MED},fg=#{@COLOR_IRIS}'
 set -g pane-active-border-style 'bg=default,fg=#{@COLOR_TEXT}'
 set -g pane-border-style 'bg=default,fg=#{@COLOR_BASE}'
 
