:gear: Reduce history limits in tmux and zsh
Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,7 @@ set-option -g renumber-windows on
 set -g detach-on-destroy off 
 
 # Increase history size (from 2,000)
-set -g history-limit 1000000 
+set -g history-limit 10000
 
 # Enable vi mode in tmux
 set-window-option -g mode-keys vi
