--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -29,9 +29,6 @@ cursor-style = block
 cursor-style-blink = false
 mouse-hide-while-typing = true
 
-macos-icon = custom-style
-macos-icon-frame = beige
-macos-icon-ghost-color = #BCBEC4
-macos-icon-screen-color = #EA9D34
+macos-icon = xray
 
 confirm-close-surface = false
