:gear: Update tmux config
Simple, simple, simple...

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,16 +33,16 @@ set -g status-left ''
 # Increase status left length (from 10)
 set -g status-left-length 100
 # Display information on the right side of the staus bar
-set -g status-right ' #[bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE},bold] %H:%M %b %d, %Y '
+set -g status-right ''
 # Increase status right length (from 10)
 set -g status-right-length 100
 # Make status bar background transparent
 set -g status-style 'bg=default'
-set -g status-justify left
+set -g status-justify centre
 setw -g window-status-separator ' '
 
-set -g window-status-current-format '#[bg=#{@COLOR_FOAM},fg=#{@COLOR_BASE},bold] 󰓏 #{?window_zoomed_flag, ,}#{window_name}:#{window_panes} '
-set -g window-status-format         '#[bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE},bold] #{window_name}:#{window_panes} '
+set -g window-status-current-format '#[fg=#{@COLOR_LOVE},bold] #{window_name}:#{window_panes} '
+set -g window-status-format         '#[fg=#{@COLOR_FOAM},bold] #{window_name}:#{window_panes} '
 
 set -g message-command-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
 set -g message-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
@@ -102,9 +102,6 @@ set -g mouse on
 
 # Use m to maximize pane
 bind -r m resize-pane -Z
-
-# Use S to run ssh with fzf
-bind -r S send-keys "ssh **" Tab
 
 set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:/opt/homebrew/bin"
 
