:gear: Update nvim config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,7 @@ set -g status-style 'bg=default'
 set -g status-justify centre
 setw -g window-status-separator ' '
 
-set -g window-status-current-format '#[fg=#{@COLOR_LOVE},bold] #{window_name}:#{window_panes} '
+set -g window-status-current-format '#[fg=#{@COLOR_ROSE},bold] #{window_name}:#{window_panes} '
 set -g window-status-format         '#[fg=#{@COLOR_FOAM},bold] #{window_name}:#{window_panes} '
 
 set -g message-command-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
