:gear: Update tmux config
Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,8 +41,8 @@ set -g status-style 'bg=default'
 set -g status-justify centre
 setw -g window-status-separator ' '
 
-set -g window-status-current-format '#[fg=#{@COLOR_ROSE},bold] #{window_name}:#{window_panes} '
-set -g window-status-format         '#[fg=#{@COLOR_FOAM},bold] #{window_name}:#{window_panes} '
+set -g window-status-current-format '#[fg=#{@COLOR_ROSE},bold] #I:#{window_name}[#{window_panes}] '
+set -g window-status-format         '#[fg=#{@COLOR_FOAM},bold] #I:#{window_name}[#{window_panes}] '
 
 set -g message-command-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
 set -g message-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
@@ -116,6 +116,7 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # FZF switch window
 bind-key -r "C-w" run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
+bind-key g run-shell -b "$HOME/dotfiles/.config/scripts/tmux-open-gh.sh"
 
 # FZF menu actions
 TMUX_FZF_MENU=\
@@ -129,12 +130,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'           		  # Persist tmux sessio
 set -g @plugin 'tmux-plugins/tmux-continuum'     	          # Automatically saves sessions for you every 15 minutes
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name' 	  # Automatically rename your tmux windows to Nerd Font Icons
 set -g @plugin 'sainnhe/tmux-fzf'				                    # Use fzf to manage your tmux work environment!
-set -g @plugin 'tmux-plugins/tmux-logging'			            # Easy logging and screen capturing for Tmux
 
 set -g @resurrect-strategy-nvim 'session'
 
 set -g @continuum-boot 'on'
-set -g @continuum-boot-options 'kitty'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
