--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -38,7 +38,7 @@ set -g status-right ''
 set -g status-right-length 100
 # Make status bar background transparent
 set -g status-style 'bg=default'
-set -g status-justify centre
+set -g status-justify absolute-centre
 setw -g window-status-separator ' '
 
 set -g window-status-current-format '#[fg=#{@COLOR_ROSE},bold] #I:#{window_name}[#{window_panes}] '
@@ -67,7 +67,7 @@ bind - split-window -v -c "#{pane_current_path}"
 
 # Set custom binding for reloading tmux config
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \; display-message -d 1000 "tmux configuration reloaded!"
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -101,7 +101,7 @@ bind -r V select-layout even-vertical
 set -g mouse on
 
 # Use m to maximize pane
-bind -r m resize-pane -Z
+bind-key m resize-pane -Z
 
 set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:/opt/homebrew/bin"
 
@@ -114,26 +114,14 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 # Don't exit copy mode when dragging with mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# FZF switch window
-bind-key -r "C-w" run-shell -b "$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh switch"
+# fzf window switch
 bind-key g run-shell -b "$HOME/dotfiles/.config/scripts/tmux-open-gh.sh"
-
-# FZF menu actions
-TMUX_FZF_MENU=\
-"attach session\n$HOME/.tmux/plugins/tmux-fzf/scripts/session.sh attach\n"\
-"rename window\n$HOME/.tmux/plugins/tmux-fzf/scripts/window.sh rename\n"
+bind-key W display-popup -E -b none -w 40% -h 20% "$HOME/dotfiles/.config/scripts/tmux-switcher.sh"
+bind-key S display-popup -E -b none -w 40% -h 20% "$HOME/dotfiles/.config/scripts/tmux-sessionizer.sh"
 
 # Plungins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'           		  # Persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum'     	          # Automatically saves sessions for you every 15 minutes
-set -g @plugin 'joshmedeski/tmux-nerd-font-window-name' 	  # Automatically rename your tmux windows to Nerd Font Icons
-set -g @plugin 'sainnhe/tmux-fzf'				                    # Use fzf to manage your tmux work environment!
-
-set -g @resurrect-strategy-nvim 'session'
-
-set -g @continuum-boot 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run "~/.tmux/plugins/tpm/tpm"
