:gear: Update tmux config
Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Set true color support
 set-option -a terminal-features 'xterm-kitty:RGB'
+new-session -A -s tabletop
 
 # Set theme colors (rose pine moon colors)
 set -g @COLOR_BASE '#faf4ed'
@@ -17,13 +18,12 @@ set -g @COLOR_HIGHLIGHT_LOW '#f4ede8'
 set -g @COLOR_HIGHLIGHT_MED '#dfdad9'
 set -g @COLOR_HIGHLIGHT_HIGH '#cecacd'
 
-# Set default shell
-set-option -g default-shell /bin/zsh
-
-# Status bar configuration
-set-option -g focus-events on
 # Enable status bar
 set -g status on
+# Set default shell
+set-option -g default-shell /bin/zsh
+# Status bar configuration
+set-option -g focus-events on
 # Move status bar to the top (default is bottom)
 set-option -g status-position top
 # Update the status line every 5 seconds (default is 15)
@@ -39,7 +39,6 @@ set -g status-right-length 100
 # Make status bar background transparent
 set -g status-style 'bg=default'
 set -g status-justify absolute-centre
-setw -g window-status-separator ' '
 
 set -g window-status-current-format '#[fg=#{@COLOR_ROSE},bold] #I:#{window_name}[#{window_panes}] '
 set -g window-status-format         '#[fg=#{@COLOR_FOAM},bold] #I:#{window_name}[#{window_panes}] '
