:gear: Update tmux config
Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Set true color support
 set-option -a terminal-features 'xterm-kitty:RGB'
-new-session -A -s tabletop
+new-session -A -s tabletop -n tabletop
 
 # Set theme colors (rose pine moon colors)
 set -g @COLOR_BASE '#faf4ed'
