--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # Set true color support
 set-option -a terminal-features 'xterm-kitty:RGB'
-new-session -A -s tabletop -n tabletop
+new-session -A -s tabletop -n tabletop:1
 
 # Set theme colors (rose pine moon colors)
 set -g @COLOR_BASE '#faf4ed'
@@ -115,8 +115,10 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # fzf window switch
 bind-key g run-shell -b "$HOME/dotfiles/.config/scripts/tmux-open-gh.sh"
-bind-key W display-popup -E -b none -w 40% -h 20% "$HOME/dotfiles/.config/scripts/tmux-switcher.sh"
-bind-key S display-popup -E -b none -w 40% -h 20% "$HOME/dotfiles/.config/scripts/tmux-sessionizer.sh"
+bind-key W display-popup -E -b none -w 60% -h 20% "$HOME/dotfiles/.config/scripts/tmux-switcher.sh"
+bind-key S display-popup -E -b none -w 60% -h 20% "$HOME/dotfiles/.config/scripts/tmux-sessionizer.sh"
+bind-key M display-popup -b rounded -w 60% -h 80% "$HOME/dotfiles/.config/scripts/tmux-man-reader.sh"
+bind-key G display-popup -b rounded -w 60% -h 80% "bash $HOME/dotfiles/.config/scripts/tmux-go-docs.sh"
 
 # Plungins
 set -g @plugin "tmux-plugins/tpm"
