:gear: Update tmux config
Signed-off-by: Valentin Vasilev <valentin.vasilev@sap.com>

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,8 +43,8 @@ set -g status-justify absolute-centre
 set -g window-status-current-format '#[fg=#{@COLOR_ROSE},bold] #I:#{window_name}[#{window_panes}] '
 set -g window-status-format         '#[fg=#{@COLOR_FOAM},bold] #I:#{window_name}[#{window_panes}] '
 
-set -g message-command-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
-set -g message-style 'bg=#{@COLOR_LEAF},fg=#{@COLOR_BASE}'
+set -g message-command-style 'bg=#{@COLOR_TEXT},fg=#{@COLOR_BASE}'
+set -g message-style 'bg=#{@COLOR_TEXT},fg=#{@COLOR_BASE}'
 set -g mode-style 'bg=#{@COLOR_HIGHLIGHT_MED},fg=#{@COLOR_IRIS}'
 set -g pane-active-border-style 'bg=default,fg=#{@COLOR_TEXT}'
 set -g pane-border-style 'bg=default,fg=#{@COLOR_BASE}'
@@ -117,8 +117,8 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 bind-key g run-shell -b "$HOME/dotfiles/.config/scripts/tmux-open-gh.sh"
 bind-key W display-popup -E -b none -w 60% -h 20% "$HOME/dotfiles/.config/scripts/tmux-switcher.sh"
 bind-key S display-popup -E -b none -w 60% -h 20% "$HOME/dotfiles/.config/scripts/tmux-sessionizer.sh"
+bind-key K display-popup -E -b none -w 60% -h 20% "$HOME/dotfiles/.config/scripts/tmux-kswitch.sh"
 bind-key M display-popup -b rounded -w 60% -h 80% "$HOME/dotfiles/.config/scripts/tmux-man-reader.sh"
-bind-key G display-popup -b rounded -w 60% -h 80% "bash $HOME/dotfiles/.config/scripts/tmux-go-docs.sh"
 
 # Plungins
 set -g @plugin "tmux-plugins/tpm"
